fixes #1124 Studio: dark mode issues in Configurations
- move from material to nebular

--- a/bot/admin/web/src/app/configuration/bot/bot-configuration.component.css
+++ b/bot/admin/web/src/app/configuration/bot/bot-configuration.component.css
@@ -23,7 +23,7 @@
 }
 
 .long-text {
-  width: 90%;
+  min-width: 100%;
 }
 
 .bot-input {
@@ -45,3 +45,26 @@
   font-size: x-small;
 }
 
+.inline {
+  display: inline-block;
+}
+
+.block {
+  display: block;
+}
+
+.nb-form-field {
+  position: relative;
+  padding-right: 10px;
+}
+
+.nb-form-field > label {
+  display: block;
+  font-size: x-small;
+  pointer-events: none;
+  font-weight: bold;
+}
+
+.nb-form-field > nb-select {
+  min-width: 180px;
+}
